--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bower": "^1.7.9",
     "browser-sync": "^2.14.0",
     "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.2.4",
     "gulp-sass": "^2.3.2",
     "gulp-util": "^3.0.7"
   }
