--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "bower": "^1.7.9",
     "browser-sync": "^2.14.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-load-plugins": "^1.2.4",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7"
   }
 }
